feature: add scope to token for method security