@@ -1,12 +1,15 @@
 package com.danielbontii.tpms.models;
 
+import com.danielbontii.tpms.enums.Role;
 import lombok.Getter;
 import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -17,15 +20,18 @@ public class CustomUserDetails implements UserDetails {
     private final String username;
     private final String password;
 
+    private final Role role;
+
     public CustomUserDetails(User user) {
         this.userId = user.getId();
         this.username = user.getEmail();
         this.password = user.getPassword();
+        this.role = user.getRole();
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(role.getCode()));
     }
 
     @Override
